@@ -19,9 +19,9 @@ export(ini_expressionset_yml)
 export(label)
 export(match_cells)
 export(origin)
+export(reset)
 export(show_expressionset)
 export(validate_options)
-export(validate_reset)
 export(validator)
 export(values)
 export(variables)
