@@ -1,4 +1,5 @@
 version 0.1.4
+- Deprecated 'validate_reset', in favour of the shorter 'reset' (use 'validate::reset' in case of ambiguity)
 - Deprecated 'validate_options' in favour of the shorter 'voptions'
 - New option na.value with default value NA, controlling the output when a rule evaluates to NA.
 - Bugfix: macro expansion failed when macros were reused in other macros.
